--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,16 @@ body {
     background-color:rgb(10, 25, 44);
 }
 
+.absCtr
+{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+}​
+
 .invisible {
     opacity: 0;
     -webkit-animation: fading ease-in 1s;
