--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,17 @@ body {
     background-color:rgb(10, 25, 44);
 }
 
-.absCtr
-{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+.absCtr {
     text-align: center;
-}​
+    width: 100%;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+}
+
+.child {
+    margin-top: 35vh;
+}
 
 .invisible {
     opacity: 0;
