--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color:rgb(10, 25, 44);
+    background-color: rgb(10, 25, 44);
 }
 
 .about-txt {
@@ -44,16 +44,19 @@ body {
     from {
         opacity: 0;
     }
+
     to {
-        opacity: 1;   
+        opacity: 1;
     }
 }
+
 @-moz-keyframes fading {
     from {
         opacity: 0;
     }
+
     to {
-        opacity: 1;   
+        opacity: 1;
     }
 }
 
@@ -61,7 +64,88 @@ body {
     from {
         opacity: 0;
     }
+
     to {
-        opacity: 1;   
+        opacity: 1;
     }
+}
+
+
+/*CARDS*/
+.cards {
+    margin: 0 auto;
+    list-style: none;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 1.5rem;
+}
+
+.card {
+    max-width: 400px;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    border: 2px solid var(--dark-turquoise);
+}
+
+@media screen and (max-width: 588px) {
+    .card {
+        display: block;
+        max-width: inherit;
+    }
+}
+
+.card .image {
+    max-height: 200px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card .image img {
+    width: 100%;
+    height: 175px;
+    object-fit: cover;
+}
+
+.card .image .claps {
+    color: transparent;
+    text-shadow: 0 0 0 var(--turquoise);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.card .image .claps:focus,
+.card .image .claps:hover {
+    color: transparent;
+    text-shadow: 0 0 0 var(--color);
+}
+
+.card .details {
+    margin: 0.5rem;
+}
+
+.card .details h4 {
+    margin: 0.5rem 0;
+}
+
+.card .details p {
+    margin: 0.5rem 0;
+}
+
+.card .extra {
+    margin-top: auto;
+}
+
+.badge {
+    display: inline-block;
+    padding: 0.25rem 0.5rem;
+    border-radius: 4px;
+    margin: 0.25rem;
+}
+
+.badge.blue {
+    background-color: var(--blue);
+    border: 2px solid var(--blue-dark);
+    color: var(--white);
 }
